--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,8 @@
 <head>
     <title>NBN Technology Map</title>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js" integrity="sha512-puJW3E/qXDqYp9IfhAI54BJEaWIfloJ7JWs7OeD5i6ruC9JZL1gERT1wjtwXFlh7CjE7ZJ+/vcRZRkIYIb6p4g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.5.3/leaflet.markercluster.js" integrity="sha512-OFs3W4DIZ5ZkrDhBFtsCP6JXtMEDGmhl0QPlmWYBJay40TT1n3gt2Xuw8Pf/iezgW9CdabjkNChRqozl/YADmg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.79.0/dist/L.Control.Locate.min.js" integrity="sha256-jVdNHjjOOJMoykxLOdGxOUzGJDlmr8MM6sFF++b1/sI=" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbHBg39oMEx6sWXD3Qt_cgR_7WrtsSBmE&libraries=places"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/leaflet-google-places-autocomplete/src/js/leaflet-gplaces-autocomplete.min.js"></script>
+    <!--script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbHBg39oMEx6sWXD3Qt_cgR_7WrtsSBmE&libraries=places"></script-->
+    <!--script defer src="https://cdn.jsdelivr.net/npm/leaflet-google-places-autocomplete/src/js/leaflet-gplaces-autocomplete.min.js"></script-->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css" integrity="sha512-h9FcoyWjHcOcmEVkxOfTLnmZFWIH0iZhZT1H2TbOq55xssQGEJHEaIm+PgoUaZbRvQTNTluNOEfb1ZRy6D3BOw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" integrity="sha512-nMNlpuaDPrqlEls3IX/Q56H36qvBASwb3ipuo3MxeWbsQB1881ox0cRv7UPTgBlriqoynt35KjEwgGUeUXIPnw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -45,6 +42,5 @@
 </head>
 <body>
     <div id="map"></div>
-    <script defer src="./map.js"></script>
 </body>
 </html>
