--- a/index.html
+++ b/index.html
@@ -77,4 +77,4 @@
             background-color: white;
             display: none;
             overflow: hidden;
-        }</style><script defer="defer" src="651.b172546d31d332f4c135.js"></script><script defer="defer" src="app.a378410d101ccf403e31.js"></script></head><body><div id="map"></div></body></html>
+        }</style><script defer="defer" src="155.72227fbc05c52cee474f.js"></script><script defer="defer" src="app.566039a34bebfb3de114.js"></script><link rel="manifest" href="auto/manifest.2e4b4cbda5d9964a59276808f8a5c237.json" crossorigin="use-credentials" /><link rel="mask-icon" href="auto/icon_1024x1024.a53a659fbaecd0292d49fe76650cdeef.svg" /></head><body><div id="map"></div></body></html>
