--- a/index.html
+++ b/index.html
@@ -77,4 +77,4 @@
             background-color: white;
             display: none;
             overflow: hidden;
-        }</style><script defer="defer" src="155.72227fbc05c52cee474f.js"></script><script defer="defer" src="app.566039a34bebfb3de114.js"></script><link rel="manifest" href="auto/manifest.2e4b4cbda5d9964a59276808f8a5c237.json" crossorigin="use-credentials" /><link rel="mask-icon" href="auto/icon_1024x1024.a53a659fbaecd0292d49fe76650cdeef.svg" /></head><body><div id="map"></div></body></html>
+        }</style><script defer="defer" src="155.72227fbc05c52cee474f.js"></script><script defer="defer" src="app.566039a34bebfb3de114.js"></script><meta name="apple-mobile-web-app-title" content="NBN SQ Map" /><meta name="apple-mobile-web-app-capable" content="yes" /><meta name="apple-mobile-web-app-status-bar-style" content="default" /><link rel="apple-touch-startup-image" sizes="1024x1024" href="./icon_1024x1024.a53a659fbaecd0292d49fe76650cdeef.svg" /><link rel="manifest" href="./manifest.4210cb8464066b452aaf0fccd5cee7a0.json" /><link rel="mask-icon" href="./icon_1024x1024.a53a659fbaecd0292d49fe76650cdeef.svg" /></head><body><div id="map"></div></body></html>
